testdata/baselines/reference/submodule/conformance/parserClass2.errors.txt
parserClass2.ts(1,43): error TS2304: Cannot find name 'ILogger'.
parserClass2.ts(2,37): error TS2304: Cannot find name 'ILogger'.


==== parserClass2.ts (2 errors) ====
        export class LoggerAdapter implements ILogger {
                                              ~~~~~~~
!!! error TS2304: Cannot find name 'ILogger'.
            constructor (public logger: ILogger) { 
                                        ~~~~~~~
!!! error TS2304: Cannot find name 'ILogger'.
                this._information = this.logger.information();
            }
        }